name:                lab6
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/flyingleafe/lab6#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Mukhutdinov
maintainer:          flyingleafe@gmail.com
copyright:           2016 Dmitry Mukhutdinov
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Token
                     , Lexer
                     , Parser
                     , Print
                     , Eval
                     , Common
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , safe
                     , dlist
                     , transformers
                     , mtl
                     , monad-loops
  default-language:    Haskell2010

executable lab6-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lab6
  default-language:    Haskell2010

test-suite lab6-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lab6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flyingleafe/lab6
